@@ -43,3 +43,32 @@ double pnbinom(double x, double size, double prob, int lower_tail, int log_p)
     x = floor(x + 1e-7);
     return pbeta(prob, size, x + 1, lower_tail, log_p);
 }
+
+double pnbinom_mu(double x, double size, double mu, int lower_tail, int log_p)
+{
+#ifdef IEEE_754
+    if (ISNAN(x) || ISNAN(size) || ISNAN(mu))
+	return x + size + mu;
+    if(!R_FINITE(size) || !R_FINITE(mu))	ML_ERR_return_NAN;
+#endif
+    if (size <= 0 || mu < 0)	ML_ERR_return_NAN;
+
+    if (x < 0) return R_DT_0;
+    if (!R_FINITE(x)) return R_DT_1;
+    x = floor(x + 1e-7);
+    /* return
+     * pbeta(pr, size, x + 1, lower_tail, log_p);  pr = size/(size + mu), 1-pr = mu/(size+mu)
+     *
+     *= pbeta_raw(pr, size, x + 1, lower_tail, log_p)
+     *            x.  pin   qin
+     *=  bratio (pin,  qin, x., 1-x., &w, &wc, &ierr, log_p),  and return w or wc ..
+     *=  bratio (size, x+1, pr, 1-pr, &w, &wc, &ierr, log_p) */
+    {
+	int ierr;
+	double w, wc;
+	bratio(size, x+1, size/(size+mu), mu/(size+mu), &w, &wc, &ierr, log_p);
+	if(ierr)
+	    MATHLIB_WARNING(_("pnbinom_mu() -> bratio() gave error code %d"), ierr);
+	return lower_tail ? w : wc;
+    }
+}
